# Rust

./: Cargo.toml  LICENSE  README.md
benches/: bench.rs
docs/: cpython.md  fftw.md  ndarray.md  rsmpi.md  rustFFT.md
scripts/: vcvars64.bat
src/: lib.rs  main.rs
src/cpython_test/: mod.rs
src/example_utils/: mod.rs
src/fftw_test/: mod.rs
src/ndarray/: mod.rs
src/ndarray_test/: mod.rs
src/rustfft_test/: mod.rs
src/thread_test/: mod.rs
tests/: integration_test.rs  tests_ndarray.rs
