[package]
name = "rust-examples"
version = "0.1.0"
authors = ["Toshiyuki Nishiyama Hiraki <take90-it09-easy27@outlook.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.1"
num-traits = "0.2.11"
cast = "0.2.3"